server/kubernetes_and_openshift/manifests/khulnasoft_csp_007_networking/openshift_route/khulnasoft-gateway-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: khulnasoft-gateway
  namespace: khulnasoft
  labels:
    app: khulnasoft-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: khulnasoft-gateway-ssl
    - port: 3622
      protocol: TCP
      targetPort: 3622
      name: khulnasoft-gateway
  selector:
    app: khulnasoft-gateway
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: khulnasoft-gateway
  namespace: khulnasoft
  labels:
    app: khulnasoft-gateway
spec:
  to:
    kind: Service
    name: khulnasoft-gateway
    weight: 100
  port:
    targetPort: khulnasoft-gateway-ssl
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
