server/kubernetes_and_openshift/manifests/khulnasoft_csp_007_networking/openshift_route/khulnasoft-web-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: khulnasoft-web
  namespace: khulnasoft
  labels:
    app: khulnasoft-web
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
      name: khulnasoft-web-ssl
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: khulnasoft-web
  selector:
    app: khulnasoft-web
  type: LoadBalancer
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: khulnasoft-web
  namespace: khulnasoft
  labels:
    app: khulnasoft-web
spec:
  to:
    kind: Service
    name: khulnasoft-web
    weight: 100
  port:
  # Please change the targetPort to khulnasoft-web if you would like to use http protocol(insecure mode)
    targetPort: khulnasoft-web-ssl
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
